2009-09-23  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Hide the commands for library compile
	  targets.

2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Use Xcode's partial class list to
	  filter the classes we generate. Remove unused code.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Fix spelling and grammar in
	  messages.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Tweak dialog a little more.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Improve sim-only dialog.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Improve sim-only dialog.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs:
	* IPhoneBuildExtension.cs:
	* IPhoneFrameworkBackend.cs: Improve the sim-only warning
	  dialog.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Add methods for warning about
	  sim-only build.

	* Keychain.cs:
	* Gui/IPhoneSigningKeyPanel.cs: Simplify code for finding
	  named certs.

	* IPhoneBuildExtension.cs: Warn when using features that don't
	  exist in eval version. Fix some possible NREs in enumerating
	  certs.

	* IPhoneCommands.cs: Warn when using features that don't exist
	  in eval version.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Fix NRE with certs that don't
	  have a CN.

2009-09-14  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs:
	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml: Disable all the iPhone addin's
	  extensions when the SDK is not installed.

	* Templates/IPhoneEntitlements.xft.xml: Add a template for
	  entitlements.plist.

2009-09-13  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Pre-create resource directories for xcode