@@ -1,3 +1,8 @@
+2009-09-24  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* CodeBehindGenerator.cs: Properly type outlets connected to
+	  IBUICustomObjects.
+
 2009-09-23  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* IPhoneCommands.cs: Hide the commands for library compile
